--- a/frontend/src/css/Footer.css
+++ b/frontend/src/css/Footer.css
@@ -291,7 +291,8 @@
     }
 
     .contact-info p {
-        justify-content: center;
+        justify-content: flex-start;
+        padding-left: 30vw;
     }
 
     .footer-links a:hover {
@@ -326,5 +327,8 @@
     .contact-info svg {
         padding: 0.6rem;
         font-size: 1rem;
+    }
+     .contact-info p {
+        padding-left: 0px;
     }
 } 
